# advent-of-code-2024

./: .gitignore  Cargo.toml
input/: 20-puzzle.dot
src/lib/: lib.rs
