[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
itertools = "0.12.0"
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8.0"

# crossbeam = "0.8.2"
# crossbeam-channel = "0.5.8"
# ndarray = "0.15.6"
# ndarray-linalg = "0.16.0"
# regex = "1.10.2"
# rgeometry = "0.9.0"
# thiserror = "1.0.50"

[lib]
name = "aoc23"
path = "src/lib/lib.rs"
