[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
derive_more = "0.99.17"
geo = "0.27.0"
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"]}
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8.0"

# crossbeam = "0.8.2"
# crossbeam-channel = "0.5.8"
# regex = "1.10.2"
# rgeometry = "0.9.0"
# thiserror = "1.0.50"

[lib]
name = "aoc24"
path = "src/lib/lib.rs"
